--- a/css/style_wor.css
+++ b/css/style_wor.css
@@ -104,6 +104,10 @@ p {
 
 .topnav a.active { background-color: #C66A53; }
 
+.topnav .button-ghost { display: none;  }
+
+
+
 .dropdown {
   position: relative;
   display: inline-block;
@@ -270,11 +274,13 @@ support-grid {
   height: 48px;
   padding: 0 24px;
   display: inline-flex;
-  align-items: center;
+  align-self: flex-start;
+  position: static; /* Ensure they stay in normal flow */
   border-radius: 8px;
   font-weight: 600;
   text-decoration: none;
   cursor: pointer;
+  clear: both;
 }
 
 .cta { background-color: #f6a21d; color: #fff; }
@@ -466,4 +472,22 @@ body.dark-mode .button-ghost:hover {
   .site-title { font-size: 1.8rem; }
   .flex-container2 { flex-direction: column; text-align: center; }
   .icon-bar { right: 10px; bottom: 10px; }
+   .topnav.responsive {
+    position: relative;
+    flex-direction: column;
+   }
+   
+   .topnav.responsive a,
+     .topnav.responsive .button-ghost {
+       display: block;
+       float: none;
+       text-align: left;
+       padding: 12px 16px;
+   }
+   
+   .topnav.responsive .icon {
+       position: absolute;
+       right: 0;
+       top: 0;
+   }
 }
